# floppa-bot

./: .gitignore  Cargo.toml
src/: config.rs  default-config.toml  embed.rs  main.rs
src/command/: caption.rs  help.rs  info.rs  mod.rs
